노션 내보내기 UI 최종 정리: 상단 통합 버튼명 변경 및 고객 탭 개별 버튼 복구

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3350,8 +3350,8 @@
                             저장</button>
                         <button onclick="exportToNotion('all', event);"
                             style="padding: 6px 12px; margin-left: 8px; border: none; background: #37352f; border-radius: 6px; font-size: 12px; cursor: pointer; color: white; display: inline-flex; align-items: center; gap: 4px; font-weight: 500;"
-                            title="노션으로 전체 데이터 내보내기">
-                            📤 노션 내보내기</button>
+                            title="고객정보, 스케줄, 체크리스트, A/S 리스트를 모두 노션으로 내보냅니다">
+                            📤 통합 노션 내보내기</button>
                         <button onclick="printCurrentCustomerAll()"
                             style="padding: 6px 12px; margin-left: 8px; border: 1px solid #d2d2d7; background: white; border-radius: 6px; font-size: 12px; cursor: pointer; color: #1d1d1f;">🖨️
                             통합인쇄</button>
@@ -3392,7 +3392,11 @@
                                 <div class="subtitle">Customer Information</div>
                             </div>
                             <div style="display: flex; gap: 8px;">
-
+                                <button class="notion-export-btn" onclick="exportToNotion('customer', event);"
+                                    style="background: linear-gradient(135deg, #000 0%, #333 100%); color: white; border: none; padding: 8px 16px; border-radius: 8px; cursor: pointer; font-size: 12px; font-weight: 600; display: flex; align-items: center; gap: 6px;"
+                                    title="노션으로 고객 정보만 내보내기">
+                                    📤 노션 내보내기
+                                </button>
                                 <button class="pdf-btn" onclick="downloadPDF('customerInfoDoc', '고객정보')">🖨️
                                     인쇄/PDF</button>
                             </div>
