--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -13635,12 +13635,95 @@
         }
 
         async function saveExpensesToCloud() {
-            showToast('클라우드 저장 기능은 Apps Script 업데이트가 필요합니다. 현재는 로컬에만 저장됩니다.', 'warning');
-            saveExpensesLocal();
+            const btn = event?.target;
+            const originalText = btn?.innerText || '저장하기';
+
+            try {
+                if (btn) {
+                    btn.disabled = true;
+                    btn.innerText = '저장 중...';
+                }
+
+                const payload = {
+                    action: 'updateExpenses',
+                    expenses: expensesRows.map((row, idx) => ({
+                        no: idx + 1,
+                        date: row.date || '',
+                        category: row.category || '',
+                        detail: row.detail || '',
+                        amount: parseNumber(row.amount),
+                        payMethod: row.payMethod || '',
+                        receipt: row.receipt || '',
+                        memo: row.memo || ''
+                    }))
+                };
+
+                const response = await fetch(CUSTOMER_SYNC_URL, {
+                    method: 'POST',
+                    body: JSON.stringify(payload)
+                });
+                const result = await response.json();
+
+                if (result.result === 'success') {
+                    showToast('운영비가 클라우드에 저장되었습니다.', 'success');
+                    saveExpensesLocal(); // 로컬에도 저장
+                } else {
+                    throw new Error(result.error || '저장 실패');
+                }
+            } catch (err) {
+                console.error('운영비 저장 오류:', err);
+                showToast('클라우드 저장 실패: ' + err.message, 'error');
+                saveExpensesLocal(); // 실패해도 로컬에는 저장
+            } finally {
+                if (btn) {
+                    btn.disabled = false;
+                    btn.innerText = originalText;
+                }
+            }
         }
 
         async function syncExpensesFromCloud() {
-            showToast('클라우드 불러오기 기능은 Apps Script 업데이트가 필요합니다.', 'warning');
+            const btn = event?.target;
+            const originalText = btn?.innerText || '불러오기';
+
+            try {
+                if (btn) {
+                    btn.disabled = true;
+                    btn.innerText = '불러오는 중...';
+                }
+
+                const response = await fetch(`${CUSTOMER_SYNC_URL}?sheet=expenses`);
+                const result = await response.json();
+
+                if (result.result === 'success') {
+                    if (result.expenses && result.expenses.length > 0) {
+                        expensesRows = result.expenses.map(exp => ({
+                            date: exp.date || '',
+                            category: exp.category || '',
+                            detail: exp.detail || '',
+                            amount: exp.amount ? formatNumber(exp.amount) : '',
+                            payMethod: exp.payMethod || '',
+                            receipt: exp.receipt || '',
+                            memo: exp.memo || ''
+                        }));
+                        renderExpensesTable();
+                        saveExpensesLocal();
+                        showToast(`${result.expenses.length}건의 운영비를 불러왔습니다.`, 'success');
+                    } else {
+                        showToast('저장된 운영비 데이터가 없습니다.', 'info');
+                    }
+                } else {
+                    throw new Error(result.error || '불러오기 실패');
+                }
+            } catch (err) {
+                console.error('운영비 불러오기 오류:', err);
+                showToast('클라우드 불러오기 실패: ' + err.message, 'error');
+            } finally {
+                if (btn) {
+                    btn.disabled = false;
+                    btn.innerText = originalText;
+                }
+            }
         }
 
 
