--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3353,9 +3353,20 @@
                             <div
                                 style="font-size:11px; font-weight:600; opacity:0.8; margin-bottom:4px; letter-spacing:1px; color:#059669;">
                                 DESIGN JIG ADMIN</div>
-                            <h2 style="margin:0; font-size:26px; color:#064e3b; font-weight:700;">💰 운영비 관리 대장</h2>
-                            <p style="margin:4px 0 0 0; font-size:12px; color:#6b7280;">Operating Expenses Management
-                            </p>
+                            <h2 style="margin:0; font-size:26px; color:#064e3b; font-weight:700;">💰 운영비 및 고정지출 관리 대장
+                            </h2>
+
+                            <!-- 안내 문구 박스 -->
+                            <div
+                                style="margin-top:16px; padding:16px; background:rgba(255,255,255,0.6); border:1px solid rgba(16,185,129,0.2); border-radius:8px; font-size:13px; color:#065f46; line-height:1.6;">
+                                <ul style="margin:0; padding-left:20px; list-style-type:disc;">
+                                    <li>본 화면은 현장 공사 정산이 아닌, <b>임대료·급여·차량비·세금</b> 등 사업체 운영을 위한 비용을 관리하는 시트입니다.</li>
+                                    <li>상단 <b>'조회 월'</b>을 기준으로 고정지출과 월별 운영비를 함께 관리합니다.</li>
+                                    <li><b>고정지출 항목</b>은 한 번 설정하면 매달 자동으로 반영됩니다. (항목명, 금액 자동 계산)</li>
+                                    <li>하단 표에는 해당 월에 실제 발생한 <b>변동 운영비</b>만 입력해 주세요.</li>
+                                    <li>총 운영비 합계는 손익·통계·세무 정리의 기준으로 사용됩니다.</li>
+                                </ul>
+                            </div>
                         </div>
                         <div style="display:flex; gap:10px; align-items:center;">
                             <button onclick="addExpenseRow()"
