refactor: 고정지출 설정 구조 개선 (변동지출과 통일)
- 컬럼 순서 변경: [대분류 → 상세내역 → 월 고정금액 → 결제수단 → 증빙자료 → 활성화]
- '항목명'을 '상세내역'으로 명칭 변경하여 변동지출과 용어 통일
- Apps Script 및 프론트엔드 데이터 매핑 로직 전체 업데이트

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -3426,17 +3426,20 @@
                                             style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e; width:40px;">
                                         </th>
                                         <th
-                                            style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e;">
-                                            항목명</th>
-                                        <th
                                             style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e; width:120px;">
                                             대분류</th>
+                                        <th
+                                            style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e;">
+                                            상세내역</th>
                                         <th
                                             style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e; width:120px;">
                                             월 고정금액</th>
                                         <th
                                             style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e; width:100px;">
                                             결제수단</th>
+                                        <th
+                                            style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e; width:100px;">
+                                            증빙자료</th>
                                         <th
                                             style="padding:10px 8px; border:1px solid #fcd34d; font-size:12px; color:#92400e; width:60px;">
                                             활성화</th>
@@ -14030,10 +14033,11 @@
         // 고정지출 항목 추가
         function addFixedExpenseItem() {
             fixedExpenseItems.push({
-                itemName: '',
                 category: '',
+                detail: '', // 항목명 -> 상세내역
                 amount: 0,
                 payMethod: '',
+                receipt: '', // 증빙자료 추가
                 active: true
             });
             renderFixedExpenseTable();
@@ -14066,15 +14070,16 @@
                     <td style="text-align:center; padding:8px;">
                         <button onclick="removeFixedExpenseItem(${index})" style="color:#dc2626; border:none; background:none; cursor:pointer; font-size:14px;">🗑️</button>
                     </td>
-                    <td style="padding:4px;"><input type="text" value="${item.itemName || ''}" onchange="updateFixedExpenseItem(${index}, 'itemName', this.value)" style="width:100%; padding:6px; border:1px solid #fcd34d; border-radius:4px;"></td>
                     <td style="padding:4px;">
                         <select onchange="updateFixedExpenseItem(${index}, 'category', this.value)" style="width:100%; padding:6px; border:1px solid #fcd34d; border-radius:4px;">
                             <option value="">선택</option>
                             ${EXPENSE_CATEGORIES.map(c => `<option value="${c}" ${c === item.category ? 'selected' : ''}>${c}</option>`).join('')}
                         </select>
                     </td>
+                    <td style="padding:4px;"><input type="text" value="${item.detail || item.itemName || ''}" onchange="updateFixedExpenseItem(${index}, 'detail', this.value)" style="width:100%; padding:6px; border:1px solid #fcd34d; border-radius:4px;"></td>
                     <td style="padding:4px;"><input type="text" value="${formatNumber(item.amount)}" onchange="updateFixedExpenseItem(${index}, 'amount', this.value)" style="width:100%; padding:6px; border:1px solid #fcd34d; border-radius:4px; text-align:right;"></td>
                     <td style="padding:4px;"><input type="text" value="${item.payMethod || ''}" onchange="updateFixedExpenseItem(${index}, 'payMethod', this.value)" style="width:100%; padding:6px; border:1px solid #fcd34d; border-radius:4px;"></td>
+                    <td style="padding:4px;"><input type="text" value="${item.receipt || ''}" onchange="updateFixedExpenseItem(${index}, 'receipt', this.value)" style="width:100%; padding:6px; border:1px solid #fcd34d; border-radius:4px;"></td>
                     <td style="padding:4px; text-align:center;">
                         <input type="checkbox" ${item.active ? 'checked' : ''} onchange="updateFixedExpenseItem(${index}, 'active', this.checked)" style="width:18px; height:18px; cursor:pointer;">
                     </td>
@@ -14099,7 +14104,14 @@
                         receipt: row.receipt || row.proof || '',
                         memo: row.memo || row.note || ''
                     })),
-                    fixedExpenses: fixedExpenseItems
+                    fixedExpenses: fixedExpenseItems.map(item => ({
+                        category: item.category,
+                        detail: item.detail || item.itemName,
+                        amount: item.amount,
+                        payMethod: item.payMethod,
+                        receipt: item.receipt,
+                        active: item.active
+                    }))
                 };
 
                 const response = await fetch(CUSTOMER_SYNC_URL, {
@@ -14345,10 +14357,11 @@
                     // 고정지출 설정 불러오기
                     if (result.fixedExpenses && result.fixedExpenses.length > 0) {
                         fixedExpenseItems = result.fixedExpenses.map(f => ({
-                            itemName: f.itemName || '',
                             category: f.category || '',
+                            detail: f.detail || f.itemName || '',
                             amount: f.amount || 0,
                             payMethod: f.payMethod || '',
+                            receipt: f.receipt || '',
                             active: f.active !== false
                         }));
                         localStorage.setItem('designzig_fixed_expenses', JSON.stringify(fixedExpenseItems));
